Having to change the music path so that paperclip does not have to rename the file when the song name or album changes. Its going to just be based off the ID of the song record. The database for mpd wont need to be updated either since the id is not going to change. Adding a new 404 image to the page. It's probably the best piece of photoshop work I've done in awhile #fumullins.

--- a/public/404.html
+++ b/public/404.html
@@ -11,7 +11,7 @@
   }
 
   div.dialog {
-    width: 25em;
+    width: 35em;
     margin: 4em auto 0 auto;
     border: 1px solid #CCC;
     border-right-color: #999;
@@ -52,7 +52,8 @@
   <div class="dialog">
     <h1>The page you were looking for doesn't exist.</h1>
     <p>You may have mistyped the address or the page may have moved.</p>
+    <img src='/images/fumullins_manslife.png' alt='404 fumullins'
+    border='0'>
   </div>
-  <p>If you are the application owner check the logs for more information.</p>
 </body>
 </html>
